--- a/Documentation/html/md_math.html
+++ b/Documentation/html/md_math.html
@@ -92,29 +92,25 @@ $(document).ready(function(){initNavTree('md_math.html',''); initResizable(); })
 <div class="textblock"><p>A half single particle model by Group B for the 2023 PX915 group project.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 1 Mathematics and Algorithms</h1>
-<p>A Crank-Nicolson semi-implicit finite difference scheme is used to obtain concentration of lithium in the sphere, c(iapp, r), at each time step by approximating the partial differential equation (PDE) solution.</p>
-<p>This is accurate to second order both spatially and temporally, i.e. $O(\Delta r^2)$ &amp; $O(\Delta t^2)$.</p>
-<p>$$ \frac{c_i^{j+1} - c_i^j}{\Delta t} = \frac{D}{2r_i^2} \Bigg[ \left(r_i^2 \frac{c_{i+1}^{j+1} - 2c_i^{j+1} + c_{i-1}^{j+1}}{\Delta r^2} + r_i^2 \frac{c_{i+1}^j - 2c_i^j + c_{i-1}^j}{\Delta r^2}\right) + \nonumber \ r_i \left(\frac{c_{i+1}^{j+1} - c_{i-1}^{j+1}}{2\Delta r} + \frac{c_{i+1}^{j} - c_{i-1}^{j}}{2\Delta r} \right) \Bigg] $$</p>
-<h5></h5>
-<ul>
-<li>A Crank-Nicolson semi-implicit finite difference scheme will be used to approximate the partial differential equation (PDE) solution to obtain the concentration of lithium in the sphere, <code>c(i_app, r)</code>, at each time step. This is accurate to second order both spatially and temporally, i.e. <code>O(Delta r^2)</code> &amp; <code>O(Delta t^2)</code>.</li>
-<li>A key benefit of the Crank-Nicolson scheme is that it is unconditionally stable for the spherically symmetric diffusion equation (the PDE of interest), thus not restricting the user's choice of step size spatially or temporally. Although, due to being second order, the accuracy may be impacted by a larger step size.</li>
-<li>The implicit nature of the Crank-Nicolson scheme makes it ideal for numerically approximating solutions to both stiff and highly nonlinear diffusion problems, providing the user a strong base from which to update this solution framework.</li>
-<li>Additionally, the Crank-Nicolson scheme is consistent meaning that 'the error of the numerical method converges to zero as the grid spacing, or time step, reduces to zero from above, under certain regularity conditions on the solution.'</li>
-<li>The consistency and stability of the Crank-Nicolson scheme means it satisfies the Lax equivalence theorem, which states that a numerical method is convergent if and only if it is both consistent and stable.</li>
-<li>Specific Equation: <blockquote class="doxtable">
-<p>```math \frac{c_i^{j+1} - c_i^j}{\Delta t} = \frac{D}{2r_i^2} \left[ \left(r_i^2 \frac{c_{i+1}^{j+1} - 2c_i^{j+1} + c_{i-1}^{j+1}}{\Delta r^2} + r_i^2 \frac{c_{i+1}^j - 2c_i^j + c_{i-1}^j}{\Delta r^2}\right) + r_i \left( \frac{c_{i+1}^{j+1} - c_{i-1}^{j+1}}{2\Delta r} + \frac{c_{i+1}^{j} - c_{i-1}^{j}}{2\Delta r} \right) \right] </p>
+<p>A Crank-Nicolson semi-implicit finite difference scheme is used to approximate the partial differential equation (PDE) solution to obtain the concentration of lithium in the sphere, <code>$c(i_app, r)$</code>, at each time step. This is accurate to second order both spatially and temporally, i.e. <code>$O(Delta r^2)$</code> &amp; <code>$O(Delta t^2)$</code>.</p>
+<p>A key benefit of the Crank-Nicolson scheme is that it is unconditionally stable for the spherically symmetric diffusion equation (the PDE of interest), thus not restricting the user's choice of step size spatially or temporally. Although, due to being second order, the accuracy may be impacted by a larger step size.</p>
+<p>The implicit nature of the Crank-Nicolson scheme makes it ideal for numerically approximating solutions to both stiff and highly nonlinear diffusion problems, providing the user a strong base from which to update this solution framework.</p>
+<p>Additionally, the Crank-Nicolson scheme is consistent meaning that 'the error of the numerical method converges to zero as the grid spacing, or time step, reduces to zero from above, under certain regularity conditions on the solution.'</p>
+<p>The consistency and stability of the Crank-Nicolson scheme means it satisfies the Lax equivalence theorem, which states that a numerical method is convergent if and only if it is both consistent and stable.</p>
+<p>Specific Equation:</p>
+<p><img src="specific_eq.png" alt="" class="inline"/></p>
+<p>Generally:</p>
+<p><img src="general_eq.png" alt="" class="inline"/> This is an average of standard forward and backward Euler methods.</p>
+<p>Boundary conditions are treated through the use of ghost nodes, which assign values for the function of interest to regions just beyond the domain of the problem in an attempt to approximate the first derivatives present in the Neumann boundary conditions specified. For example,</p>
+<blockquote class="doxtable">
+<p>$[\frac{\partial c}{\partial r}\Bigg|_{r=0} \approx \frac{c_1 - c_{-1}}{2\Delta r} = 0 \iff c_1 = c_{-1}.]$ </p>
 </blockquote>
-</li>
-<li>Generally: ```math \frac{u_i^{j+1} - u_i^j}{\Delta t} = \frac{1}{2} \left[ F^{j+1}_i(u,r,t,\frac{\partial u}{\partial r},\frac{\partial ^2 u}{\partial r^2}) + F^j_i(u,r,t,\frac{\partial u}{\partial r},\frac{\partial ^2 u}{\partial r^2}) \right].</li>
-</ul>
-<p>This is an average of standard forward and backward Euler methods.</p>
-<ul>
-<li>Boundary conditions will be treated through the use of ghost nodes, which assign values for the function of interest to regions just beyond the domain of the problem in an attempt to approximate the first derivatives present in the Neumann boundary conditions specified. For example, $$ \frac{\partial c}{\partial r}\Bigg|_{r=0} \approx \frac{c_1 - c_{-1}}{2\Delta r} = 0 \iff c_1 = c_{-1}. $$</li>
-<li>The accuracy of the scheme will be chosen such that it is equivalent to the interior solved points.</li>
-<li>Finally, a general initial condition is specified of the form $$ c = c_0 \textrm{ at } t=0. $$</li>
-<li>The form of c_0 is assumed to be constant in R. </li>
-</ul>
+<p>The accuracy of the scheme is such that it is equivalent to the interior solved points.</p>
+<p>Finally, a general initial condition is specified of the form</p>
+<blockquote class="doxtable">
+<p>$c = c_0 \textrm{ at } t=0.$ </p>
+</blockquote>
+<p>The form of c_0 is assumed to be constant in R. </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
