--- a/Documentation/html/md_uq.html
+++ b/Documentation/html/md_uq.html
@@ -99,11 +99,8 @@ Uncertainty Propagation</h1>
 <p>Input Parameter Distributions</p>
 <p><img src="Input_Distributions.png" alt="" class="inline"/></p>
 <p>Resulting distribution of v(t)</p>
-<div class="image">
-<img src="UQ.png" alt=""/>
-<div class="caption">
-caption</div></div>
- </div></div><!-- contents -->
+<p><img src="UQ.png" alt="" class="inline"/> </p>
+</div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
 <!-- start footer part -->
