--- a/Documentation/html/index.html
+++ b/Documentation/html/index.html
@@ -100,7 +100,8 @@ Introduction</h1>
 <li>Uncertainty quantification</li>
 </ul>
 <h1><a class="anchor" id="Contributors"></a>
-Fraser Birks, Laura Cairns, Sebastian Dooley, Arielle Fitkin, Jake Eller, and Yu Lei</h1>
+Contributors</h1>
+<p>Fraser Birks, Laura Cairns, Sebastian Dooley, Arielle Fitkin, Jake Eller, and Yu Lei</p>
 <p>HetSys CDT, University of Warwick </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
