--- a/md_math.html
+++ b/md_math.html
@@ -101,12 +101,7 @@ $(document).ready(function(){initNavTree('md_math.html',''); initResizable(); })
 <p><img src="specific_eq.png" alt="" class="inline"/></p>
 <p>Generally:</p>
 <p><img src="general_eq.png" alt="" class="inline"/> This is an average of standard forward and backward Euler methods.</p>
-<p>Boundary conditions are treated through the use of ghost nodes, which assign values for the function of interest to regions just beyond the domain of the problem in an attempt to approximate the first derivatives present in the Neumann boundary conditions specified. For example,</p>
-<p><img src="eg_eq.png" alt="" class="inline"/></p>
-<p>The accuracy of the scheme is such that it is equivalent to the interior solved points.</p>
-<p>Finally, a general initial condition is specified of the form</p>
-<p><img src="c_eq.png" alt="" class="inline"/></p>
-<p>The form of c_0 is assumed to be constant in R. </p>
+<p>Boundary conditions are treated through the use of ghost nodes, which assign values for the function of interest to regions just beyond the domain of the problem in an attempt to approximate the first derivatives present in the Neumann boundary conditions specified. </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
